# testcontainers-github-actions

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  dev.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-and-test--on-ci-server.yml  build-and-test--with-dev-image.yml
docs/diagrams/: testcontainers-ci-direct-dependencies.drawio  testcontainers-ci-docker-from-docker.drawio
src/: app.py  dynamodb.py  logger.py  orders.py
tests/: __init__.py  conftest.py  test_orders.py
