[tool.poetry]
name = "src"
version = "0.0.0"
description = "An example running Testcontainer tests in CI pipelines."
authors = ["Filips Nastins <nastinsfilips@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.1.1"
structlog = "^23.1.0"
tomodachi = "^0.26.1"
types-aiobotocore = { extras = ["dynamodb", "sns", "sqs"], version = "^2.5.2" }
uvloop = "^0.17.0"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.2.0"
black = "^23.7.0"
colorama = "^0.4.6"
flake8 = "^6.1.0"
flake8-black = "^0.3.6"
flake8-bugbear = "^23.5.9"
flake8-isort = "^6.0.0"
flake8-junit-report = "^2.1.0"
flake8-pyproject = "^1.2.3"
flake8-pytest-style = "^1.7.2"
httpx = "^0.25.1"
isort = "^5.12.0"
mypy = "^1.4.1"
pre-commit = "^3.6.2"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-env = "^0.8.2"
tomodachi-testcontainers = "^0.10.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hooks = "dev:hooks"
format = "dev:format"
lint = "dev:lint"
test = "dev:test"
test-ci = "dev:test_ci"

[tool.black]
line-length = 120
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '\.git/|\.mypy_cache/|\.venv/|\.pytest_cache/|\.vscode/|__pycache__/|build/|dist/'

[tool.isort]
profile = "black"
line_length = 120
skip = [
    ".git",
    ".mypy_cache",
    ".venv",
    ".pytest_cache",
    ".vscode",
    "__pycache__",
    "build",
    "dist",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.flake8]
ignore = ["ANN101", "ANN401", "BLK100", "E501", "LIT101", "PL123"]
literal-inline-quotes = "double"
literal-multiline-quotes = "double"
exclude = [
    ".git",
    ".mypy_cache",
    ".venv",
    ".pytest_cache",
    ".vscode",
    "__pycache__",
    "build",
    "dist",
]

[tool.pytest.ini_options]
log_level = "INFO"
env = [
    # Set dummy AWS credentials so that we don't accidentally mutate real infrastructure
    "AWS_ACCESS_KEY_ID=testing",
    "AWS_DEFAULT_REGION=us-east-1",
    "AWS_SECRET_ACCESS_KEY=testing",
    "AWS_SECURITY_TOKEN=testing",
    "AWS_SESSION_TOKEN=testing",
]
